# adbench

./: .gitignore  PROBLEMS.md  README.md  pyproject.toml
adbench/: __init__.py  extract.py  llm.py  problem.py  runner.py  sandbox.py
adbench/problems/: __init__.py  brutal.py  complex_ad.py  compositions.py  diff_algorithms.py  diff_simulation.py  gradient_estimation.py  higher_order.py  implicit.py  implicit_layers.py  integrals.py  matrix_calculus.py  numerical_traps.py  ode_sensitivity.py  optimization.py  registry.py  sorting_ranking.py  special_functions.py  stochastic.py
