[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adbench"
version = "0.1.0"
description = "Automatic Differentiation Benchmark for Large Language Models"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "anthropic>=0.30",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
adbench = "adbench.runner:main"
